update buttons design

--- a/src/app/Shared/components/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/Shared/components/layouts/auth-layout/auth-layout.component.html
@@ -2,9 +2,8 @@
     <div class="container-fluid p-4">
         <div class="header">
             <div class="back-arr">
-                <i class="bi bi-arrow-left"></i>
-                <button class="btn btn-outline-secondary" type="button">
-                     {{'back' | translate}}
+                <button class="btn" type="button">
+                    <i class="bi bi-arrow-left"></i>  {{'back' | translate}}
                 </button>
             </div>
             <div class="translate-btn">
