--- a/src/app/Components/sign-up/sign-up.component.html
+++ b/src/app/Components/sign-up/sign-up.component.html
@@ -29,7 +29,7 @@
                     Upload Excel Template Fillen with your Info.
                 </h5>
                 <input type="file" class="form-control" (change)="onFileChange($event)" accept=".xlsx, .xls" />
-                <button class="btn" (click)="processExcel()">Process Excel</button>
+                <button class="btn" (click)="processExcel()">Submit</button>
             </div>
             
             
