--- a/src/app/Components/sign-up/sign-up.component.html
+++ b/src/app/Components/sign-up/sign-up.component.html
@@ -58,7 +58,7 @@
             </div>
         
             <!-- ======= Pharmacy Basic Details tab ======== -->
-            <form [formGroup]="registerform" (ngSubmit)="submit()">
+            <form #f="ngForm" [formGroup]="registerform" (ngSubmit)="submit()">
                 <div class="lpx-wizard-content active" data-form-tab="">
                     <div class="row my-2">
                         <div class="col-12">
@@ -93,6 +93,13 @@
                                         id="pharmacy_phone"
                                     >
                                     </ngx-intl-tel-input>
+                                    
+                                    @if(registerform.get('basicForm')?.get('pharmacy_phone')?.invalid && registerform.get('basicForm')?.get('pharmacy_phone')?.touched){
+                                        <div class="text-danger">
+                                            Invalid Phone Number  
+                                       </div>
+                                    }
+                                    
                                 </div>
             
                                 <div class="col-xl-6 mb-3">        
@@ -121,6 +128,11 @@
                                         formControlName="personal_phone"
                                     >
                                     </ngx-intl-tel-input>
+                                    @if(registerform.get('basicForm')?.get('personal_phone')?.invalid && registerform.get('basicForm')?.get('personal_phone')?.touched){
+                                        <div class="text-danger">
+                                            Invalid Phone Number  
+                                       </div>
+                                    }
                                 </div>
     
                                 <div class="col-xl-6 mb-3">        
@@ -184,37 +196,64 @@
                                 </div>
     
                                 <div class="form-check col-md-3" >
-                                    <input class="form-check-input" formControlName="sameHours" type="checkbox" value="" id="sameHours">
+                                    <input class="form-check-input" formControlName="sameHours" type="checkbox" (change)="sameHours()" value="" id="sameHours">
                                     <label class="form-check-label" for="flexCheckDefault">
                                       {{'pharmacyWorking.sameTime'|translate}}
                                     </label>
                                 </div>
     
-                                <div class="working-hourse-actions col-12" formArrayName="days">
+                                @if(!onlyTime){
+                                    <div class="working-hourse-actions col-12" formArrayName="days">
                                 
-                                    <div  *ngFor="let dayControl of daysArray.controls; let i = index" [formGroupName]="i">
-                                     
-                                        <div *ngIf="dayControl.get('enabled')?.value">
-                                           <div class="time-inputs mt-5 row">
-                                                <div class="day-name col-md-3">
-                                                    {{ dayControl.get('day')?.value }}
-                                                </div>
-                                                <div class="col-md-3">
-                                                    <input type="checkbox" formControlName="is24Hours" (change)="toggle24Hours(i)"> Is 24 Hours?
-                                                </div>
-                                                <div class=" col-md-3 inputs" *ngIf="!dayControl.get('is24Hours')?.value">
-                                                    <input placeholder="From *" step="900" onfocus="this.type='time'" class="form-control m-1" formControlName="from">
-                                                </div>
-                                                <div class="col-md-3 inputs" *ngIf="!dayControl.get('is24Hours')?.value">
-                                                    <input placeholder="To *" step="900" onfocus="this.type='time'" class="form-control m-1" formControlName="to">
-                                                </div>
-                                           </div> 
-                                           <hr>
+                                        <div  *ngFor="let dayControl of daysArray.controls; let i = index" [formGroupName]="i">
+                                         
+                                            <div *ngIf="dayControl.get('enabled')?.value">
+                                               <div class="time-inputs mt-5 row">
+                                                    <div class="day-name col-md-6">
+                                                        {{ dayControl.get('day')?.value }}
+                                                    </div>
+                                                    <div class="col">
+                                                        <input type="checkbox" formControlName="is24Hours" (change)="toggle24Hours(i)"> Is 24 Hours?
+                                                    </div>
+                                                    <div class="col inputs" *ngIf="!dayControl.get('is24Hours')?.value">
+                                                        <input placeholder="From *" step="900" onfocus="this.type='time'" class="form-control m-1" formControlName="from">
+                                                    </div>
+                                                    <div class="col inputs" *ngIf="!dayControl.get('is24Hours')?.value">
+                                                        <input placeholder="To *" step="900" onfocus="this.type='time'" class="form-control m-1" formControlName="to">
+                                                    </div>
+                                               </div> 
+                                               <hr>
+                                            </div>
+                                            
                                         </div>
                                         
                                     </div>
-                                    
-                                </div>
+                                }
+                                @else {
+                                    <div class="working-hourse-actions col-12" formArrayName="days">
+                                
+                                        <div  *ngFor="let dayControl of daysArray.controls; let i = index" [formGroupName]="i">
+                                         
+                                            <div>
+                                               <div class="time-inputs mt-5 row">
+                                                    
+                                                    <div class="col">
+                                                        <input type="checkbox" formControlName="is24Hours" (change)="toggle24Hours(i)"> Is 24 Hours?
+                                                    </div>
+                                                    <div class="col inputs" *ngIf="!dayControl.get('is24Hours')?.value">
+                                                        <input placeholder="From *" step="900" onfocus="this.type='time'" class="form-control m-1" formControlName="from">
+                                                    </div>
+                                                    <div class="col inputs" *ngIf="!dayControl.get('is24Hours')?.value">
+                                                        <input placeholder="To *" step="900" onfocus="this.type='time'" class="form-control m-1" formControlName="to">
+                                                    </div>
+                                               </div> 
+                                               <hr>
+                                            </div>
+                                            
+                                        </div>
+                                        
+                                    </div>
+                                }
                             </div>
                             
                         </div>
