--- a/src/app/Components/sign-up/sign-up.component.scss
+++ b/src/app/Components/sign-up/sign-up.component.scss
@@ -21,15 +21,34 @@
 
 // ==== Excel Template registration style ====
 .download-btn-container{
-   
     button{
-        padding: 20px;
+        padding:10px 20px;
         background-color: #154f79;
+        border-radius: 45px;
+        border: none !important;
         color: #e8eef3;
         font-size: 25px !important;
-        font-weight: 600;
+        font-weight: 500;
+        width: auto !important;
         i{
-            margin: 10px;
+            padding: 10px;
+            font-size: 25px !important;
+            font-weight: 600 !important;
+        }
+    }
+}
+
+.upload-btn-container{
+    button{
+        padding:10px 20px ;
+        background-color: #154f79;
+        border-radius: 45px;
+        border: none !important;
+        color: #e8eef3;
+        font-size: 25px !important;
+        font-weight: 500;
+        i{
+            padding: 10px;
             font-size: 25px !important;
             font-weight: 600 !important;
         }
